syntax = "proto3";
package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message SumRequest {
  int32 firstNumber = 1;
  int32 secondNumber = 2;
}

message SumResponse {
  int32 sumResult = 1;
}

message PrimeNumberDecompositionRequest {
  int64 number = 1;
};

message PrimeNumberDecompositionResponse {
  int64 primeFactor = 1;
};

message ComputeAverageRequest {
  int64  number = 1;
}

message ComputeAverageResponse {
  double average = 1;
}

message FindMaximumRequest {
  int64 number = 1;
}

message FindMaximumResponse {
  int64 maximum = 1;
}

message SquareRootRequest {
  int64 number = 1;
}

message SquareRootResponse {
  double number_root = 1;
}

service CalculatorService {

  // unary api call
  rpc Sum(SumRequest) returns (SumResponse) {};

  // server streaming api call
  rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest)
      returns (stream PrimeNumberDecompositionResponse) {};

  // client streaming api call
  rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};

  // Bi Directional Streaming API
  rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {};

  // Advanced features error Implementation
  /**
    this rpc will throw an exception if the send number is negative
    the error being sent is of type INVALID_ARGUMENT
   */
  rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}